# openexr

./: .gitignore  CHANGELOG.md  LICENSE.md  OpenEXR.cabal  README.markdown  README.md
Graphics/OpenEXR/: Half.hsc  RGBA.hsc  Raw.hsc
cbits/: half.c
src/Graphics/OpenEXR/: Raw.hsc
