cabal-version: 2.2
name:          openexr
category:      Graphics
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/openexr/
bug-reports:   http://github.com/ekmett/openexr/issues
copyright:     Copyright (C) 2014-2019 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.8.3
synopsis:      Bindings to Industrial Light & Magic's OpenEXR high dynamic-range file format.
description:
  OpenEXR is a high dynamic-range (HDR) image file format developed by Industrial Light & Magic for use in computer imaging applications.
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/ekmett/openexr.git

library
  hs-source-dirs: src
  build-depends:
    base >= 4.11 && < 5,
    half >= 0.2 && < 0.3,
    linear

  exposed-modules: Graphics.OpenEXR.Raw

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  build-tool-depends: hsc2hs:hsc2hs
  extra-libraries: IlmImf
  pkgconfig-depends: OpenEXR >= 2.3.0
